--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
         <!-- endbuild -->
 
         <!-- build:js(app) scripts/plugins.js -->
+        <script src="bower_components/FileSaver/FileSaver.js"></script>
         <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/transition.js"></script>
         <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
