--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
         <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tab.js"></script>
         <script src="bower_components/bootstrap-sass-official/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+        <script src="bower_components/vkbeautify-wrapper/dist/vkbeautify.0.99.00.beta.js"></script>
         <!-- endbuild -->
 </body>
 </html>
